@startuml
title 04. Supervisor Host Agent Domain Model (Current Source, 2026-05-11)

skinparam shadowing false
skinparam classAttributeIconSize 0

class SupervisorAgentRequest {
  +sessionId: String
  +message: String
  +model: String
}

class SupervisorExecutionRequest {
  +sessionId: String
  +message: String
  +model: String
}

class SupervisorPlanningContext {
  +taskId: String
  +sessionId: String
  +userMessage: String
  +model: String
  +history: List<String>
  +routingPlans: List<RoutingPlan>
  +results: List<DownstreamCallResult>
  +routingIndex: int
  +swarmStateVersion: long
  +swarmSharedFacts: Map<String, Object>
  +currentNode: String
  +checkpointId: String
}

class RoutingPlan {
  +agentKey: String
  +method: String
  +reason: String
  +priority: int
  +arguments: Map<String, Object>
  +sourceType: String
  +handoffDepth: int
  +parentAgentKey: String
}

class DownstreamCallResult {
  +agentKey: String
  +taskId: String
  +status: String
  +payload: String
  +errorCode: String
  +errorMessage: String
  +handoffRequested: boolean
  +nextAgentKey: String
  +handoffMethod: String
  +handoffReason: String
  +handoffArguments: Map<String, Object>
}

class HitlPolicyResult {
  +required: boolean
  +policyId: String
  +reason: String
}

class HitlReviewTicket {
  +taskId: String
  +sessionId: String
  +message: String
  +model: String
  +policyId: String
  +policyReason: String
  +status: HitlReviewStatus
  +decisionReason: String
  +decisionId: String
}

class SwarmState {
  +taskId: String
  +sessionId: String
  +stateVersion: long
  +updatedAt: Instant
  +sharedFacts: Map<String, Object>
  +eventLog: List<Map<String, Object>>
}

class HandoffDirective {
  +fromAgentKey: String
  +nextAgentKey: String
  +method: String
  +reason: String
  +arguments: Map<String, Object>
}

class HandoffValidationResult {
  +accepted: boolean
  +reasonCode: String
  +directive: HandoffDirective
  +plan: RoutingPlan
  +hopCount: int
}

class InvocationPolicyContext {
  +plan: RoutingPlan
  +planningContext: SupervisorPlanningContext
}

class HitlPolicyContext {
  +sessionId: String
  +message: String
  +model: String
}

class HandoffPolicyContext {
  +planningContext: SupervisorPlanningContext
  +batchResults: List<DownstreamCallResult>
}

class SupervisorOutputEvent {
  +type: SupervisorOutputEventType
  +content: String
  +progressEvent: SupervisorProgressEvent
}

class SupervisorProgressEvent {
  +stage: String
  +progress: int
  +message: String
  +metadata: Map<String, Object>
}

class SupervisorGraphState {
  +SESSION_ID
  +TASK_ID
  +USER_MESSAGE
  +MODEL
  +HISTORY
  +CHECKPOINT_ID
  +CURRENT_NODE
  +ROUTING_PLANS
  +ROUTING_INDEX
  +CURRENT_PLAN
  +DOWNSTREAM_RESULTS
  +LAST_INVOKE_BATCH_RESULTS
  +HANDOFF_VALIDATIONS
  +HANDOFF_ENABLED
  +SWARM_SHARED_FACTS
  +SWARM_STATE_VERSION
}

class A2aTaskSnapshot {
  +taskId: String
  +sessionId: String
  +status: A2aTaskStatus
  +createdAt: Instant
  +updatedAt: Instant
  +requestMessage: String
  +responsePayload: String
  +errorCode: String
  +errorMessage: String
  +contextId: String
}

enum A2aTaskStatus {
  SUBMITTED
  WORKING
  WAITING_REVIEW
  INPUT_REQUIRED
  COMPLETED
  CANCELED
  FAILED
  REJECTED
  AUTH_REQUIRED
  UNKNOWN
}

class SupervisorGraphSnapshot {
  +taskId: String
  +sessionId: String
  +userMessage: String
  +model: String
  +history: List<String>
  +checkpointId: String
  +currentNode: String
  +routingPlans: List<RoutingPlan>
  +routingIndex: int
  +results: List<DownstreamCallResult>
  +lastInvokeBatchResults: List<DownstreamCallResult>
  +handoffValidations: List<HandoffValidationResult>
  +handoffEnabled: boolean
  +swarmSharedFacts: Map<String, Object>
  +swarmStateVersion: long
}

enum A2aTaskStatus {
  SUBMITTED
  RUNNING
  WAITING_REVIEW
  COMPLETED
  FAILED
  CANCELED
}

enum SupervisorErrorCode {
  COMPOSE_ERROR
  ORCHESTRATION_ERROR
  DOWNSTREAM_UNAVAILABLE
  CIRCUIT_OPEN
  EMPTY_RESPONSE
  DOWNSTREAM_ERROR
  INTERNAL_ERROR
  CANCELED
}

enum SupervisorInvocationStatus {
  COMPLETED
  FAILED
}

enum SupervisorRuntimeState {
  REQUEST_VALIDATED
  HISTORY_LOADED
  PLANNED
  ROUTING_SELECTED
  A2A_CALLING
  HANDOFF_EVALUATING
  HANDOFF_APPLIED
  HANDOFF_SKIPPED
  A2A_RESULT_MERGED
  COMPOSING
  COMPLETED
}

enum SupervisorGraphNode {
  PLAN
  SELECT
  INVOKE
  HANDOFF_EVALUATE
  HANDOFF_APPLY
  MERGE
  COMPOSE
}

enum SupervisorGraphRoute {
  INVOKE
  COMPOSE
}

enum SupervisorInvocationStatus {
  COMPLETED
  FAILED
}

enum HitlDecisionType {
  APPROVE
  CANCEL
  REVISE
}

enum HitlReviewStatus {
  WAITING
  APPROVED
  CANCELED
  REVISED
}

enum SupervisorA2aMethod {
  SendMessage
  SendStreamingMessage
  GetTask
  ListTasks
  CancelTask
  GetTaskReview
  DecideTaskReview
  DecideTaskReviewStream
  message/send
  message/stream
  tasks/get
  tasks/list
  tasks/cancel
  tasks/review/get
  tasks/review/decide
  tasks/review/decide/stream
}

interface SupervisorPlanningService {
  +plan(context): List<RoutingPlan>
}

interface HitlPolicyService {
  +evaluate(context): HitlPolicyResult
}

interface HitlDecisionService {
  +openReview(...): HitlReviewTicket
  +getReview(...): Optional<HitlReviewTicket>
  +decide(...): Optional<HitlReviewTicket>
}

interface A2AInvocationService {
  +invoke(context): DownstreamCallResult
}

interface HandoffPolicyService {
  +evaluate(context): List<HandoffValidationResult>
}

interface SupervisorResponseComposeService {
  +streamComposeEvents(context): Flux<SupervisorOutputEvent>
}

interface SupervisorSwarmCoordinator {
  +applyRoutingRule(...): List<RoutingPlan>
  +loadLatestBySession(sessionId): Optional<SwarmState>
}

SupervisorAgentRequest --> SupervisorPlanningContext
SupervisorExecutionRequest --> SupervisorAgentRequest
SupervisorPlanningContext --> RoutingPlan
SupervisorPlanningContext --> DownstreamCallResult
SupervisorPlanningContext --> SwarmState
SupervisorPlanningContext --> SupervisorGraphState
DownstreamCallResult --> HandoffDirective
HandoffValidationResult --> HandoffDirective
HandoffValidationResult --> RoutingPlan
InvocationPolicyContext --> RoutingPlan
InvocationPolicyContext --> SupervisorPlanningContext
HandoffPolicyContext --> SupervisorPlanningContext
HandoffPolicyContext --> DownstreamCallResult
HitlPolicyService --> HitlPolicyResult
HitlDecisionService --> HitlReviewTicket
SupervisorResponseComposeService --> SupervisorOutputEvent

note bottom of SupervisorPlanningContext
Current shared runtime state for:
- planning
- invoke/handoff
- compose
- swarm facts
- checkpoint recovery
end note

@enduml
